--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -11,11 +11,19 @@
 }
 
 .todo-button{
-    @apply  rounded px-4 py-2 text-white bg-cyan-500 hover:bg-cyan-700;
+    @apply  rounded-full font-medium text-white bg-cyan-500 hover:bg-cyan-700 text-sm p-2.5 text-center inline-flex items-center mr-2;
 }
 
 .todo-items{
     @apply rounded px-4 py-4 w-full bg-cyan-700 text-white mt-3 flex flex-row shadow-lg shadow-slate-400 capitalize hover:bg-cyan-900;
+}
+
+.todo-warning{
+    @apply p-4 mb-4 text-sm text-yellow-700 bg-yellow-100 rounded-lg dark:bg-yellow-200 dark:text-yellow-800;
+}
+
+.todo-alert-title{
+    @apply font-medium;
 }
 
 
